<?xml version="1.0" encoding="utf-8"?>

<!--
    Copyright 2013 Abid Hasan Mujtaba

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<resources>

    <string name="app_name">quickMail</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="accounts">Accounts</string>
    <string name="no_accounts">No Accounts. Press Menu to add.</string>
    <string name="fetching_headers">Fetching Headers</string>
    <string name="delete_account">Delete Account</string>
    <string name="add_account">Add Account</string>
    <string name="refresh">Refresh</string>
    <string name="delete_emails">Delete Emails</string>
    <string name="show_seen">Show Seen</string>
    <string name="hide_seen">Hide Seen</string>

    <string name="account_settings">Account Settings</string>
    <string name="name">Name: </string>
    <string name="host">"Host: "</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>

    <string name="desc_email_icon">Email Icon</string>

</resources>
