<?xml version="1.0" encoding="utf-8"?>

<!-- Source: http://www.androidhive.info/2011/09/how-to-create-android-menus/ (with icons) -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:menu="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        menu:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete_emails"
        menu:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/menu_accounts"
        android:title="@string/accounts"
        menu:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/menu_show_seen"
        android:title="@string/show_seen"
        menu:showAsAction="collapseActionView"/>

</menu>